# test-pre-commit-vba

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  cspell.json  pyproject.toml
src/pre_commit_vba/: __init__.py  pre_commit_vba.py
