[project]
name = "pre-commit-vba"
version = "0.0.2"
description = "Extracts VBA code from Excel files for managing VBA code in git and checks workbook version."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pywin32>=311",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "mkdocs-static-i18n>=1.3.0",
    "mypy>=1.18.2",
    "plantuml-markdown>=3.11.1",
    "pre-commit>=4.4.0",
    "pre-commit-uv>=4.2.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "ruff>=0.14.5",
    "tox>=4.32.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = [
    "D203", # incorrect-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "COM812" # missing-trailing-comma
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
exclude = "(^build/|^dist/)"

show_error_codes = true

allow_redefinition = false
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
hide_error_codes = false
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

python_version = "3.14"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["fix", "type", "3.14"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "Run test under {base_python}"
allowlist_externals = ["pytest", "mypy", "pre-commit","uv"]
commands=[["pytest"]]

[tool.tox.env.fix]
runner = "uv-venv-lock-runner"
description = "run code formatter and linter (auto-fix)"
skip_install = true
commands = [
    ["uv", "run", "pre-commit", "run", "--all-files", "--show-diff-on-failure"],
]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
description = "run type checker via mypy"
skip_install = true
commands = [
    ["mypy", "."],
    ["mypy", "tests"],
]

[tool.pytest]
minversion = "9.0"
addopts = ["-v", "-s", "--strict-markers"]
testpaths = [
    "tests"
]
markers=["develop_research"]
